<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>webcrawler-node</groupId>
    <artifactId>webcrawler-node</artifactId>
    <version>${maven.build.timestamp}</version>
    <packaging>jar</packaging>

    <properties>
        <maven.build.timestamp.format>yyyy-MM-dd_HH-mm</maven.build.timestamp.format>
        <mustache.compiler.version>0.9.4</mustache.compiler.version>
        <sun.httpserver.version>20070405</sun.httpserver.version>
        <apache.httpclient.version>4.5.12</apache.httpclient.version>
        <apache.httpclient.fluent.version>4.2</apache.httpclient.fluent.version>
        <google.gson.version>2.6.1</google.gson.version>
        <imageio.version>3.4.1</imageio.version>
        <tika.version>1.5</tika.version>
        <s3.version>1.11.789</s3.version>
        <sqs.version>1.11.194</sqs.version>
        <kinesis.version>0.12.11</kinesis.version>
        <db.version>8.0.0</db.version>
        <jsoup.version>1.13.1</jsoup.version>
        <models.version>2.7.9</models.version>
        <logback.version>1.2.3</logback.version>
        <commonscli.version>1.3.1</commonscli.version>
        <jodatime.version>2.10.5</jodatime.version>
        <json.version>20190722</json.version>
        <slack.webhook.version>1.2.1</slack.webhook.version>
        <hikaricp.version>3.3.0</hikaricp.version>
        <surefire-plugin-version>2.22.0</surefire-plugin-version>
        <temmie-webhook.version>-SNAPSHOT</temmie-webhook.version>
        <kotlin.version>1.4.0</kotlin.version>
    </properties>

    <build>

        <sourceDirectory>src/java</sourceDirectory>

        <resources>
            <!-- regular resource processsing for everything except logback.xml -->
            <resource>
                <directory>src/resources</directory>
                <excludes>
                    <exclude>logback.xml</exclude>
                </excludes>
            </resource>
            <!-- resource processsing with a different output directory for logback.xml -->
            <resource>
                <directory>src/resources</directory>
                <includes>
                    <include>logback.xml</include>
                </includes>
                <!-- relative to target/classes i.e. ${project.build.outputDirectory} -->
            </resource>
        </resources>

        <extensions>
            <extension>
                <groupId>org.kuali.maven.wagons</groupId>
                <artifactId>maven-s3-wagon</artifactId>
                <version>1.2.1</version>
            </extension>
        </extensions>

        <plugins>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <sourceDirs>
                                <sourceDir>${project.basedir}/src/java</sourceDir>
                            </sourceDirs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <outputDirectory>target/deployment</outputDirectory>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <transformers>
                                <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>br.com.lett.crawlernode.main.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin-version}</version>
            </plugin>
        </plugins>

    </build>

    <dependencies>

        <dependency>
            <groupId>com.sun.net.httpserver</groupId>
            <artifactId>http</artifactId>
            <version>${sun.httpserver.version}</version>
        </dependency>

        <!-- A JPEG reader plugin for Java ImageIO This plugin will deal with cases
            where we have Images encoded in CYMK color space -->
        <dependency>
            <groupId>com.twelvemonkeys.imageio</groupId>
            <artifactId>imageio-jpeg</artifactId>
            <version>${imageio.version}</version>
        </dependency>

        <!-- HTML parser -->
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-parsers</artifactId>
            <version>${tika.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${apache.httpclient.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>fluent-hc</artifactId>
            <version>${apache.httpclient.fluent.version}</version>
        </dependency>

        <!-- WebDriver -->

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.141.59</version>
        </dependency>

        <!-- Lett database models Already contains these dependencies: jooq, postgresql,
            mongo-java-driver -->
        <dependency>
            <groupId>br.com.lett</groupId>
            <artifactId>db</artifactId>
            <version>${db.version}</version>
        </dependency>

        <!-- Lett models -->
        <dependency>
            <groupId>br.com.lett</groupId>
            <artifactId>lett-models</artifactId>
            <version>${models.version}</version>
        </dependency>

        <!-- JSON for Java -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${json.version}</version>
        </dependency>

        <!-- Command line parsing -->
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>${commonscli.version}</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>${hikaricp.version}</version>
        </dependency>

        <!-- AWS -->
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-s3</artifactId>
            <version>${s3.version}</version>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-sqs</artifactId>
            <version>${sqs.version}</version>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>amazon-kinesis-producer</artifactId>
            <version>${kinesis.version}</version>
        </dependency>

        <!-- Joda time required for Amazon -->
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>${jodatime.version}</version>
        </dependency>

        <!-- Commom model to store image descriptors of Mongo -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${google.gson.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.github.spullara.mustache.java/compiler -->
        <dependency>
            <groupId>com.github.spullara.mustache.java</groupId>
            <artifactId>compiler</artifactId>
            <version>${mustache.compiler.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.MrPowerGamerBR</groupId>
            <artifactId>TemmieWebhook</artifactId>
            <version>${temmie-webhook.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>${kotlin.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.6</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.10</version>
        </dependency>
    </dependencies>

    <repositories>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <id>lett-maven</id>
            <url>s3://lett-maven</url>
        </repository>

    </repositories>

</project>
